<resources>
    <string name="app_name">Association Manager</string>
    <string name="txt_tituloLogin">Tienes una cuenta?</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="bt_registrar">Registrar cuenta</string>
    <string name="registrar">REGISTRAR</string>
    <string name="nombre">Nombre</string>
    <string name="primer_apellido">Primer Apellido</string>
    <string name="segundo_apellido">Segundo Apellido</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="registrar_cuenta">Registrar cuenta</string>
    <string name="telefono">Teléfono</string>
    <string name="title_activity_navigation_drawer">ActivityNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Association Manager</string>
    <string name="nav_header_subtitle">association.manager.pro@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bt_aceptar">Aceptar</string>
    <string name="perfil_usuario">Perfil Usuario</string>
    <string name="numero_afiliado">Número Afiliado</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="titulo_salir_sesion">Salir de la sesión</string>
    <string name="administradores">Administradores</string>
    <string name="bt_guardar">Guardar</string>
    <string name="listado">Listado</string>
    <string name="gestion">Gestión</string>
    <string name="admin">Admin</string>
    <string name="apellido_1">Apellido 1</string>
    <string name="apellido_2">Apellido 2</string>
    <string name="miembro_num">Miembro Nº</string>
    <string name="numero_socio">0</string>
    <string name="restablecerPassword">He olvidado mí contraseña</string>
    <string name="or">or</string>
    <string name="restablecer_password">Restablecer Password</string>
    <string name="tv_titulo_introducirEmailRegistrado">Introducir email registrado</string>
    <string name="informacion_usuario">Información Usuario</string>
    <string name="cuota_pagada">Cuota Pagada</string>
    <string name="eventos">Eventos</string>
    <string name="galeria">Galeria</string>
    <string name="menu_junta_directiva">Junta Directiva</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="area_gestion">Área de Gestión</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="enviar_notificacion">Enviar Notificación</string>
    <string name="cargos_junta_directiva">Cargos Junta Directiva</string>
    <string name="presidente">Presidente</string>
    <string name="vicepresidente">Vicepresidente</string>
    <string name="secretario_general">Secretario General</string>
    <string name="tesorero">Tesorero</string>
    <string name="vocales">Vocales</string>
    <string name="aceptar">Aceptar</string>
    <string name="facebook">association.manager.pro</string>
    <string name="perfil">Perfil</string>
    <string name="twitter">associationman4</string>
    <string name="instagram">associationmanager</string>
    <string name="youtube">Association Manager</string>
    <string name="redes_sociales">Redes Sociales</string>
    <string name="direccion">Dirección</string>
    <string name="customizacion_app">Customización App</string>
    <string name="azul_celeste">Azul Celeste</string>
    <string name="rojo">Rojo</string>
    <string name="verde">Verde</string>
    <string name="morado">Morado</string>
    <string name="negro">Negro</string>
    <string name="azul">Azul</string>
    <string name="organigrama">Organigrama</string>
    <string name="junta_directiva">Junta Directiva</string>
    <string name="hora_evento">00:00</string>
    <string name="fecha_evento">20/05/2020</string>
    <string name="titulo_evento">Título Evento</string>
    <string name="titulo_hora">h</string>
    <string name="registrar_evento">Registrar Evento</string>
    <string name="detalle_evento">Detalle Evento</string>
    <string name="preferencias">preferencias</string>
    <string name="light_dark_theme">light_dark_theme</string>
    <string name="sun">Sun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="direccion_titulo">Dirección:</string>
    <string name="titulo_telefono">Teléfono:</string>
    <string name="direccion_sede">C/ Los Olmos 34, San Millán</string>
    <string name="codigoPostal">77890</string>
    <string name="Provincia">Pontevedra</string>
    <string name="telefono_sede">600923677</string>
    <string name="titulo_cp">CP:</string>
    <string name="titulo_provincia">Provincia:</string>
    <string name="notificaciones_por_suscripcion">Notificaciones suscripción</string>
</resources>