<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_baseline_event_24"
            android:title="@string/eventos" />
        <item
            android:id="@+id/Perfil"
            android:icon="@drawable/ic_round_account_button_with_user_inside"
            android:title="@string/perfil" />
        <item
            android:id="@+id/Organigrama"
            android:icon="@drawable/administrador_de_grupo"
            android:title="@string/organigrama" />
        <item

            android:id="@+id/Direccion"
            android:icon="@drawable/pin_de_ubicacion"
            android:title="@string/direccion" />

    </group>
    <item android:title="@string/redes_sociales">
        <menu>
            <item
                android:id="@+id/Facebook"
                android:icon="@drawable/facebook"
                android:title="@string/facebook" />
            <item
                android:id="@+id/Twitter"
                android:icon="@drawable/twitter"
                android:title="@string/twitter" />
            <item
                android:id="@+id/Instagram"
                android:icon="@drawable/instagram"
                android:title="@string/instagram" />
            <item
                android:id="@+id/YouTube"
                android:icon="@drawable/youtube"
                android:title="@string/youtube" />
        </menu>
    </item>
</menu>