<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutUsers"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_app">

            <ImageView
                android:id="@+id/imagenPerfil_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_round_account_circle_24" />

            <TextView
                android:id="@+id/tv_miembro_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/amaranth"
                android:text="@string/miembro_num"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imagenPerfil_item"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_numSocio_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/amaranth"
                android:text="@string/numero_socio"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_miembro_num"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_nom_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/amaranth"
                android:gravity="center_horizontal"
                android:text="@string/nombre"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/imagenPerfil_item"
                app:layout_constraintTop_toBottomOf="@+id/tv_miembro_num" />

            <TextView
                android:id="@+id/tv_ap1_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/amaranth"
                android:gravity="center_horizontal"
                android:text="@string/apellido_1"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tv_nom_item"
                app:layout_constraintTop_toBottomOf="@+id/tv_miembro_num" />

            <TextView
                android:id="@+id/tv_ap2_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/amaranth"
                android:gravity="center_horizontal"
                android:text="@string/apellido_2"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toEndOf="@+id/tv_ap1_item"
                app:layout_constraintTop_toBottomOf="@+id/tv_numSocio_item" />

            <ImageButton
                android:id="@+id/btn_info_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="2dp"
                android:background="@null"
                android:contentDescription="@string/todo"
                android:tint="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/tv_ap2_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>